# robocup-25

./: README.md  codebook.toml  shell.nix  test_motors.py
.zed/: tasks.json
controller/: README.md  __main__.py  pyproject.toml  robocup_controller.dot  root.py
controller/behaviours/: __init__.py  debug_ui.py  localisation.py  velocity_control.py  vision.py
controller/components/: debug_server.py  pi_command.py  robocup_posetree.py  serial_command.py
controller/components/mocks/: command_mock.py
controller/interfaces/: __init__.py  command.py
controller/utils/: pid.py
debug-ui/: index.html  package.json  pnpm-lock.yaml
debug-ui/src/: index.css
last_minute/: main.py
motor-controller-pcb/: motor-controller-pcb.kicad_pcb  motor-controller-pcb.kicad_prl  motor-controller-pcb.kicad_pro  motor-controller-pcb.kicad_sch
motor-controller-pcb/fab/: motor-controller-pcb-B_Cu.gbr  motor-controller-pcb-B_Mask.gbr  motor-controller-pcb-B_Paste.gbr  motor-controller-pcb-B_Silkscreen.gbr  motor-controller-pcb-Edge_Cuts.gbr  motor-controller-pcb-F_Cu.gbr  motor-controller-pcb-F_Mask.gbr  motor-controller-pcb-F_Paste.gbr  motor-controller-pcb-F_Silkscreen.gbr  motor-controller-pcb-NPTH.drl  motor-controller-pcb-PTH.drl  motor-controller-pcb-job.gbrjob
pico/: Cargo.toml  Makerverse_Motor_2ch.py  command.py  feedback.py  kinematics.py  led_test.py  lidar.py  loopback_test.py  main.py  motor.py  motor_led_test.py  pyproject.toml
simulator/: Cargo.toml  pyproject.toml  shell.nix
simulator/src/: lib.rs  main.rs
strats/: Robocup_strats.py  pyproject.toml
(+7 files in other folders)
