[project]
name = "controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "posetree>=1.1.2",
    "py-trees>=2.3.0",
    "pyserial>=3.5",
    "scipy>=1.16.1",
    "types-pyserial>=3.5.0.20250801",
]
