[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.28", features = ["debug-render-3d"] }
